@@ -8,7 +8,9 @@
 #   PackRPM
 #
 # Defines following functions:
-#   SETTING_STRING_GET_VARIABLE(var value str [NOUNQUOTE] [NOREPLACE] [setting_sign])
+#   SETTING_STRING_GET_VARIABLE(var value str 
+#     [NOUNQUOTE] [NOREPLACE] [setting_sign]
+#     )
 #     - Get a variable and a value from a setting in string format.
 #       i.e.  VAR=Value
 #       pattern. '#' is used for comment.
@@ -33,8 +35,10 @@
 #         var: A variable that stores the result.
 #         cmd: A command.
 #
-#   SETTING_FILE_GET_VARIABLES_PATTERN(var attr_pattern setting_file [NOUNQUOTE] [NOREPLACE]
-#     [NOESCAPE_SEMICOLON] [setting_sign])
+#   SETTING_FILE_GET_VARIABLES_PATTERN(var attr_pattern setting_file 
+#     [NOUNQUOTE] [NOREPLACE]
+#     [NOESCAPE_SEMICOLON] [setting_sign]
+#     )
 #     - Get variable values from a setting file if their names matches given
 #       pattern. '#' is used for comment.
 #       * Parameters:
@@ -50,7 +54,8 @@
 #           Default value: "="
 #
 #   SETTING_FILE_GET_ALL_VARIABLES(setting_file [NOUNQUOTE] [NOREPLACE]
-#     [NOESCAPE_SEMICOLON] [setting_sign])
+#     [NOESCAPE_SEMICOLON] [setting_sign]
+#     )
 #     - Get all variable values from a setting file.
 #       It is equivalent to:
 #       SETTING_FILE_GET_VARIABLES_PATTERN("" "[A-Za-z_][A-Za-z0-9_]*"
@@ -65,8 +70,10 @@
 #         + setting_sign: (Optional) The symbol that separate attribute name and its value.
 #           Default value: "="
 #
-#   SETTING_FILE_GET_VARIABLE(var attr_name setting_file [NOUNQUOTE] [NOREPLACE]
-#     [NOESCAPE_SEMICOLON] [setting_sign])
+#   SETTING_FILE_GET_VARIABLE(var attr_name setting_file 
+#     [NOUNQUOTE] [NOREPLACE]
+#     [NOESCAPE_SEMICOLON] [setting_sign]
+#     )
 #     - Get a variable value from a setting file.
 #       It is equivalent to:
 #	SETTING_FILE_GET_VARIABLES_PATTERN(${var} "${attr_name}"
@@ -84,7 +91,8 @@
 #           Default value: "="
 #
 #   SETTING_FILE_GET_ALL_VARIABLES(setting_file [NOUNQUOTE] [NOREPLACE]
-#     [NOESCAPE_SEMICOLON] [setting_sign])
+#     [NOESCAPE_SEMICOLON] [setting_sign]
+#     )
 #     - Get all attribute values from a setting file.
 #       '#' is used to comment out setting.
 #       * Parameters:
@@ -97,7 +105,8 @@
 #           Default value: "="
 #
 #   GET_ENV(var default_value [env] 
-#      [[CACHE type docstring [FORCE]] | PARENT_SCOPE])
+#      [[CACHE type docstring [FORCE]] | PARENT_SCOPE]
+#     )
 #     - Get the value of a environment variable, or use default
 #       if the environment variable does not exist or is empty.
 #       * Parameters:
@@ -119,6 +128,14 @@
 #         var: Main variable name.
 #         validOptions: List name of valid options.
 #         arguments: (Optional) variable to be parsed.
+#
+#   VARIABLE_TO_ARGN(var prefix validOptions)
+#     - Merge the variable and options to the form of ARGN.
+#       Like the reverse of VARIABLE_PARSE_ARGN
+#       * Parameters:
+#         var: Variable that holds result.
+#         prefix: Main variable name that to be processed.
+#         validOptions: List name of valid options.
 #
 
 IF(NOT DEFINED _MANAGE_VARIABLE_CMAKE_)
@@ -370,5 +387,15 @@ IF(NOT DEFINED _MANAGE_VARIABLE_CMAKE_)
 	    ENDIF(_optIndex EQUAL -1)
 	ENDFOREACH(_arg ${ARGN})
     ENDMACRO(VARIABLE_PARSE_ARGN var validOptions)
+
+    MACRO(VARIABLE_TO_ARGN var prefix validOptions)
+	SET(${var} ${prefix})
+	FOREACH(_o ${validOptions})
+	    IF(DEFINED ${prefix}_${_o})
+		LIST(APPEND ${var} ${_o} ${${prefix}_${_o}})
+	    ENDIF(DEFINED ${prefix}_${_o})
+	ENDFOREACH(_o ${validOptions})
+    ENDMACRO(VARIABLE_TO_ARGN var prefix validOptions)
+
 ENDIF(NOT DEFINED _MANAGE_VARIABLE_CMAKE_)
 
